syntax = "proto3";

package jobapplication;

// The job application service definition.
service JobApplicationService {
  rpc CreateJobApplication (CreateJobApplicationRequest) returns (JobApplication) {}
  rpc ReadJobApplication (ReadJobApplicationRequest) returns (JobApplication) {}
  rpc UpdateJobApplication (JobApplication) returns (JobApplication) {}
  rpc DeleteJobApplication (DeleteJobApplicationRequest) returns (Empty) {}
}

message Empty {}

// The JobApplication message represents a job application record.
message JobApplication {
  int32 id = 1;
  int32 user_id = 2;
  int32 job_post_id = 3;
  int32 cv_id = 4;
  Status status = 5;

  enum Status {
    SUBMITTED = 0;
    VIEWED = 1;
  }
}

message ReadJobApplicationRequest {
  int32 id = 1;
}

message DeleteJobApplicationRequest {
  int32 id = 1;
}

message CreateJobApplicationRequest {
  int32 user_id = 1;
  int32 job_post_id = 2;
  int32 cv_id = 3;
}